[gd_scene load_steps=5 format=3 uid="uid://ck0gjkml1s28o"]

[ext_resource type="Texture2D" uid="uid://b125nwjxrqxub" path="res://Assets/Sprites/Recycle.png" id="1_8xpd8"]
[ext_resource type="PackedScene" uid="uid://dfapondah5g5c" path="res://RecycleProjectile.tscn" id="2_ef3yi"]
[ext_resource type="Script" path="res://recycle.gd" id="2_vojn4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qlw6j"]
size = Vector2(55.7275, 139.264)

[node name="Recycle" type="Node2D"]
position = Vector2(200, 128)
scale = Vector2(1.43556, 0.742664)
script = ExtResource("2_vojn4")
recycleprojectile = ExtResource("2_ef3yi")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-6.48743, -8.02292)
rotation = -3.14159
scale = Vector2(2.87055, -4.97697)
texture = ExtResource("1_8xpd8")

[node name="DespawnTimer" type="Timer" parent="Sprite2D"]
wait_time = 10.0
one_shot = true

[node name="InstanceTimer" type="Timer" parent="Sprite2D"]
wait_time = 0.8

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-6.4874, 48.1373)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(11.1455, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-22.291, 0)
shape = SubResource("RectangleShape2D_qlw6j")

[connection signal="timeout" from="Sprite2D/DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="timeout" from="Sprite2D/InstanceTimer" to="." method="_on_instance_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
